Travel::Status::DE::IRIS 1.96 - Sun Feb 25 2024

    * Re-add Wipperliese stations (service resumes on March 29th, 2024)
    * IRIS->new / get_station: correctly handle non-EVA station identifiers
      in with_related mode. Previously, these caused (harmless, but annoying)
      "isn't numeric in numeric eq (==)" warnings.

Travel::Status::DE::IRIS 1.95 - Thu Feb 22 2024

    * Update qos/delay message texts

Travel::Status::DE::IRIS 1.94 - Mon Jan 29 2024

    * Update stations list
    * Do not use now-deprecated smartmatch features

Travel::Status::DE::IRIS 1.93 - Fri Dec 22 2023

    * Update stations list

Travel::Status::DE::IRIS 1.92 - Tue Dec 12 2023

    * Update meta database (accidentally omitted in 1.91)

Travel::Status::DE::IRIS 1.91 - Sun Dec 10 2023

    * Update stations list. Frohes neues Fahrplanjahr.

Travel::Status::DE::IRIS 1.90 - Sun Sep 17 2023

    * Update stations list
    * Result: weaken (circular) wing references
    * Result: include arrival_wings departure_wings replaced_by replacement_for
      in TO_JSON

Travel::Status::DE::IRIS 1.89 - Sat Aug 19 2023

    * Update stations list

Travel::Status::DE::IRIS 1.88 - Sat Aug 05 2023

    * Update stations list

Travel::Status::DE::IRIS 1.87 - Sun Jul 09 2023

    * Update stations list

Travel::Status::DE::IRIS 1.86 - Sun Jun 04 2023

    * Update stations list

Travel::Status::DE::IRIS 1.85 - Mon May 29 2023

    * Update stations list

Travel::Status::DE::IRIS 1.84 - Sun Apr 30 2023

    * Update stations list
    * Add QoS code 78

Travel::Status::DE::IRIS 1.83 - Thu Apr 13 2023

    * Update stations list

Travel::Status::DE::IRIS 1.82 - Mon Mar 13 2023

    * Add delay code 81

Travel::Status::DE::IRIS 1.81 - Thu Jan 05 2023

    * Update stations list

Travel::Status::DE::IRIS 1.80 - Wed Dec 26 2022

    * Update stations list
    * Fix MANIFEST (broken in 1.79)

Travel::Status::DE::IRIS 1.79 - Wed Dec 26 2022

    * Stations: Further geoocordinate fixes for Dutch stations.
